--- a/src/main/resources/templates/courseform.html
+++ b/src/main/resources/templates/courseform.html
@@ -5,18 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-<form actions="#" th:actions="@{/process}"
+<form action="#" th:action="@{/process}"
       th:object="${course}"
       method="post">
     <input type="hidden" th:field="*{id}" />
     Title :<input type="text" th:field="*{title}" />
-    <span th:if="${#fields.hasErrors(title)}"
+    <span th:if="${#fields.hasErrors('title')}"
           th:errors="*{title}" ></span><br />
     Instructor :<input type="text" th:field="*{instructor}" />
-    <span th:if="${#fields.hasErrors('instructor'}"
+    <span th:if="${#fields.hasErrors('instructor')}"
           th:errors="*{instuctor}"></span><br />
-    Description :<textarea rows="3" th:fields="*{description}" />
-    
+    Description :<textarea rows="3" th:field="*{description}" />
+    <span th:if="${#fields.hasErrors('description')}"
+          th:errors="*{description}"></span><br />
+    Credits :<input type="text" th:field="*{credit}" />
+    <span th:if="${#fields.hasErrors('credit')}"
+          th:errors="*{credit}"></span><br />
+    <br />
+    <input type="submit" value="Submit" />
+
 </form>
 </body>
 </html>
